commit all changes

--- a/scripts/crawler/.env
+++ b/scripts/crawler/.env
@@ -2,7 +2,7 @@
 # Based on official Supabase PostgreSQL connection documentation
 
 # Supabase Pooler Connection (IPv4 compatible)
-# Format: postgresql://postgres.{ref}:[password]@aws-0-us-east-1.pooler.supabase.com:5432/postgres
+# Format: postgresql://postgres.[ref]:Kerrouche99@aws-0-us-east-1.pooler.supabase.com:5432/postgres
 SUPABASE_HOST=aws-0-us-east-1.pooler.supabase.com
 SUPABASE_PORT=5432
 SUPABASE_DB=postgres
